syntax = "proto3";

package csm.raft;

enum PacketType
{
    RequestVote = 0;
    RequestVoteReply = 1;
}

message Packet
{
    PacketType packetType = 1;
    bytes payload = 2;
}